--- a/apps/admin/view/default/system/home.html
+++ b/apps/admin/view/default/system/home.html
@@ -120,7 +120,7 @@
 	
 	                <tr>
 	                    <th>官方网站</th>
-	                    <td><a href="http://www.pbootcms.com" target="_blank" style="color:#666">www.pbootcms.com</a></td>
+	                    <td><a href="http://www.hongyuvip.com" target="_blank" style="color:#666">www.hongyuvip.com</a></td>
 	                </tr>
 	                
 				  	<tr>
@@ -163,7 +163,7 @@
 <script>
 $.ajax({
     type: 'GET',
-	url: 'https://www.pbootcms.com/index.php?p=/upgrade/check&version={APP_VERSION}.{RELEASE_TIME}.{$revise}&branch={$branch}&snuser={$snuser}&site={$site}',
+	url: 'https://www.hongyuvip.com/index.php?p=/upgrade/check&version={APP_VERSION}.{RELEASE_TIME}.{$revise}&branch={$branch}&snuser={$snuser}&site={$site}',
 	dataType: 'json',
 	success: function (response, status) {
 		 if(response.code==1){
