--- a/template/default/html/member/ucenter.html
+++ b/template/default/html/member/ucenter.html
@@ -95,7 +95,7 @@
 			    </tr>
 			  </tbody>
 			</table>
-			<a class="btn btn-info" href="{pboot:umodify}" role="button">修改</a>
+			<a class="btn btn-info" href="{hongyu:umodify}" role="button">修改</a>
         </div>
    </div>
  
