--- a/apps/admin/view/default/common/foot.html
+++ b/apps/admin/view/default/common/foot.html
@@ -1,7 +1,7 @@
   <div class="layui-footer">
     <!-- 底部固定区域 -->
     &copy; <a href="http://www.hongyuvip.com" target="_blank">2018-{fun=date('Y')} HongYuCMS版权所有.</a>
-  	<span class="layui-hide-xs">{pboot:runtime}</span>
+  	<span class="layui-hide-xs">{hongyu:runtime}</span>
   </div>
 </div>
 
