--- a/template/default/html/caselist.html
+++ b/template/default/html/caselist.html
@@ -8,7 +8,7 @@
      
 	<!-- 图文列表 -->
      <div class="row">
-        {pboot:list num=8 order=sorting}
+        {hongyu:list num=8 order=sorting}
             <div class="col-12 col-sm-6 col-lg-3 text-center">
                <figure class="figure">
                   <div class="card-img-200">
@@ -17,7 +17,7 @@
                   <figcaption class="figure-caption text-center lh-2"><a href="[list:link]">[list:title lencn=15]</a></figcaption>
                </figure>
             </div>
-        {/pboot:list}
+        {/hongyu:list}
     </div>
 
  	{include file=comm/page.html}
