--- a/template/default/html/comm/head.html
+++ b/template/default/html/comm/head.html
@@ -2,25 +2,25 @@
 <html lang="zh">
 <head>
 	<meta charset="utf-8">
-	<title>{pboot:pagetitle}</title>
-	<meta name="keywords" content="{pboot:pagekeywords}">
-	<meta name="description" content="{pboot:pagedescription}">
+	<title>{hongyu:pagetitle}</title>
+	<meta name="keywords" content="{hongyu:pagekeywords}">
+	<meta name="description" content="{hongyu:pagedescription}">
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,shrink-to-fit=no">
-	<link rel="stylesheet" href="{pboot:sitetplpath}/bootstrap/css/bootstrap.min.css" >
-	<link rel="stylesheet" href="{pboot:sitetplpath}/font-awesome-4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="{pboot:sitetplpath}/css/aoyun.css?v=v1.3.5" >
-	<link rel="stylesheet" href="{pboot:sitetplpath}/swiper-4.3.5/css/swiper.min.css">
-	<link rel="stylesheet" href="{pboot:sitetplpath}/css/animate.css">
-	<link rel="shortcut icon" href="{pboot:sitepath}/favicon.ico" type="image/x-icon">
-	<script src="{pboot:sitetplpath}/js/jquery-1.12.4.min.js" ></script>
+	<link rel="stylesheet" href="{hongyu:sitetplpath}/bootstrap/css/bootstrap.min.css" >
+	<link rel="stylesheet" href="{hongyu:sitetplpath}/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="{hongyu:sitetplpath}/css/aoyun.css?v=v1.3.5" >
+	<link rel="stylesheet" href="{hongyu:sitetplpath}/swiper-4.3.5/css/swiper.min.css">
+	<link rel="stylesheet" href="{hongyu:sitetplpath}/css/animate.css">
+	<link rel="shortcut icon" href="{hongyu:sitepath}/favicon.ico" type="image/x-icon">
+	<script src="{hongyu:sitetplpath}/js/jquery-1.12.4.min.js" ></script>
 </head>
 <body>
 
 <!-- 头部导航 -->
 <nav class="navbar navbar-light bg-light fixed-top navbar-expand-lg shadow-sm">
   <div class="container">
-	  	<a class="navbar-brand my-1" href="{pboot:sitepath}/">
-	      <img src="{pboot:sitelogo}" class="logo-sm-height"  height="50">
+	  	<a class="navbar-brand my-1" href="{hongyu:sitepath}/">
+	      <img src="{hongyu:sitelogo}" class="logo-sm-height"  height="50">
 	    </a>
 	    
 	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,34 +29,34 @@
 	    
 	    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 	        <ul class="navbar-nav">
-	       	  <li class="nav-item {pboot:if(0=='{sort:scode}')}active{/pboot:if}">
-				 <a class="nav-link" href="{pboot:sitepath}/" >首页</a>
+	       	  <li class="nav-item {hongyu:if(0=='{sort:scode}')}active{/hongyu:if}">
+				 <a class="nav-link" href="{hongyu:sitepath}/" >首页</a>
 	          </li>
-	          {pboot:nav num=10 parent=0}
-	              <li class="nav-item {pboot:if('[nav:scode]'=='{sort:tcode}')}active{/pboot:if}">
+	          {hongyu:nav num=10 parent=0}
+	              <li class="nav-item {hongyu:if('[nav:scode]'=='{sort:tcode}')}active{/hongyu:if}">
 	                <a class="nav-link" href="[nav:link]">[nav:name]</a>
 	              </li>
-	          {/pboot:nav}
+	          {/hongyu:nav}
 	      </ul>
 	      
 	      <span class="navbar-text">
-	     	 {pboot:if({pboot:islogin}==1)}
-				<a class="text-secondary" href="{pboot:ucenter}" >个人中心</a>
+	     	 {hongyu:if({hongyu:islogin}==1)}
+				<a class="text-secondary" href="{hongyu:ucenter}" >个人中心</a>
 		     {else}
 		     
-		     	{pboot:2if({pboot:registerstatus})}
-					<a class="text-secondary" href="{pboot:register}" >注册</a>
-				{/pboot:2if}
+		     	{hongyu:2if({hongyu:registerstatus})}
+					<a class="text-secondary" href="{hongyu:register}" >注册</a>
+				{/hongyu:2if}
 				
-				{pboot:2if({pboot:registerstatus} && {pboot:loginstatus})}
+				{hongyu:2if({hongyu:registerstatus} && {hongyu:loginstatus})}
 					/
-				{/pboot:2if}
+				{/hongyu:2if}
 				
-				{pboot:2if({pboot:loginstatus})}
-					<a class="text-secondary" href="{pboot:login}" >登录</a>
-				{/pboot:2if}
+				{hongyu:2if({hongyu:loginstatus})}
+					<a class="text-secondary" href="{hongyu:login}" >登录</a>
+				{/hongyu:2if}
 				
-		     {/pboot:if}
+		     {/hongyu:if}
 	      </span>
 	      
 	    </div>
