--- a/template/default/html/member/left.html
+++ b/template/default/html/member/left.html
@@ -3,24 +3,24 @@
 	个人中心
   </button>
   <div class="dropdown-menu">
-		<a class="dropdown-item" href="{pboot:ucenter}">账号信息</a>
+		<a class="dropdown-item" href="{hongyu:ucenter}">账号信息</a>
 		<div class="dropdown-divider"></div>
 		
-		<a class="dropdown-item" href="{pboot:logout}">退出登录</a>
+		<a class="dropdown-item" href="{hongyu:logout}">退出登录</a>
   </div> 
 </div>
 
 <div class="col-12 col-md-2 d-none d-md-block">
 	<div class="list-group">
-		 <a href="{pboot:ucenter}" class="list-group-item">
+		 <a href="{hongyu:ucenter}" class="list-group-item">
 			账号信息
 		 </a>
 		 
-		 <a href="{pboot:mycommentpage}" class="list-group-item">
+		 <a href="{hongyu:mycommentpage}" class="list-group-item">
 			我的评论
 		 </a>
 
-		 <a href="{pboot:logout}" class="list-group-item">
+		 <a href="{hongyu:logout}" class="list-group-item">
 			退出登录
 		 </a>
 	</div>
