--- a/template/default/html/member/umodify.html
+++ b/template/default/html/member/umodify.html
@@ -3,10 +3,10 @@
 {include file=comm/top.html}
 
 <!-- Bootstrap Datetimepicker-->
-<link type="text/css" href="{pboot:sitetplpath}/datetimepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
-<script type="text/javascript" src="{pboot:sitetplpath}/datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
-<script type="text/javascript" src="{pboot:sitetplpath}/datetimepicker/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
-<script type="text/javascript" src="{pboot:sitetplpath}/datetimepicker/js/format.js"></script>
+<link type="text/css" href="{hongyu:sitetplpath}/datetimepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+<script type="text/javascript" src="{hongyu:sitetplpath}/datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+<script type="text/javascript" src="{hongyu:sitetplpath}/datetimepicker/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
+<script type="text/javascript" src="{hongyu:sitetplpath}/datetimepicker/js/format.js"></script>
 <!-- Bootstrap Datetimepicker End-->
 
 <div class="container pages">
@@ -18,7 +18,7 @@
 		{include file=member/left.html}
 
         <div class="col-12 col-md-10 mt-3">		
-        		<form action="{pboot:umodify}" method="post">
+        		<form action="{hongyu:umodify}" method="post">
 
 	        		<div class="form-group">
 	                    <label for="username">用户名：</label>
@@ -75,8 +75,8 @@
 	                    <label for="sex">性别：</label>
 	                    <div>
 	                         <select class="form-control" name="sex" id="sex">
-							  <option value="男" {pboot:if('{user:sex}'=='男')}selected{/pboot:if}>男</option>
-							  <option value="女" {pboot:if('{user:sex}'=='女')}selected{/pboot:if}>女</option>
+							  <option value="男" {hongyu:if('{user:sex}'=='男')}selected{/hongyu:if}>男</option>
+							  <option value="女" {hongyu:if('{user:sex}'=='女')}selected{/hongyu:if}>女</option>
 							</select>
 	                    </div>
 	                </div>
@@ -101,7 +101,7 @@
 	                
 	                <div class="form-group">
 	                   <button type="submit" class="btn btn-info">保存</button>
-	                   <a href="{pboot:ucenter}" class="btn btn-light">返回</a>
+	                   <a href="{hongyu:ucenter}" class="btn btn-light">返回</a>
 	               </div>
                </form>
         </div>
